Source/WebCore/editing/DeleteSelectionCommand.cpp
@@ -861,24 +861,17 @@ void DeleteSelectionCommand::doApply()
         insertNodeAt(placeholder.get(), m_endingPosition);
     }
 
-#if PLATFORM(IOS)
-    // This checking is due to iphone shows the last entered character momentarily, removing and adding back the 
-    // space when deleting password cause space been showed insecurely.
-    bool isSecure = NO;
-    Node* node = m_endingPosition.deprecatedNode();
-    if (node && node->isTextNode()) {
-        Text* textNode = static_cast<Text*>(node);    
-        if (textNode->length() > 0) {
-            RenderObject* renderer = textNode->renderer();
-            isSecure = renderer->style().textSecurity() != TSNONE;
-        }
+    bool shouldRebalaceWhiteSpace = true;
+    if (!frame().editor().behavior().shouldRebalanceWhiteSpacesInSecureField()) {
+        Node* node = m_endingPosition.deprecatedNode();
+        if (node && node->isTextNode()) {
+            Text* textNode = toText(node);
+            if (textNode->length())
+                shouldRebalaceWhiteSpace = textNode->renderer()->style().textSecurity() == TSNONE;
+        }        
     }
-        
-    if (!isSecure)
+    if (shouldRebalaceWhiteSpace)
         rebalanceWhitespaceAt(m_endingPosition);
-#else
-    rebalanceWhitespaceAt(m_endingPosition);
-#endif
 
     calculateTypingStyleAfterDelete();
 
