Source/WebCore/editing/EditingBehavior.h
@@ -46,22 +46,22 @@ public:
 
     // On Windows, selections should always be considered as directional, regardless if it is
     // mouse-based or keyboard-based.
-    bool shouldConsiderSelectionAsDirectional() const { return m_type != EditingMacBehavior; }
+    bool shouldConsiderSelectionAsDirectional() const { return m_type != EditingMacBehavior && m_type != EditingIOSBehavior; }
 
     // On Mac, when revealing a selection (for example as a result of a Find operation on the Browser),
     // content should be scrolled such that the selection gets certer aligned.
-    bool shouldCenterAlignWhenSelectionIsRevealed() const { return m_type == EditingMacBehavior; }
+    bool shouldCenterAlignWhenSelectionIsRevealed() const { return m_type == EditingMacBehavior || m_type == EditingIOSBehavior; }
 
     // On Mac, style is considered present when present at the beginning of selection. On other platforms,
     // style has to be present throughout the selection.
-    bool shouldToggleStyleBasedOnStartOfSelection() const { return m_type == EditingMacBehavior; }
+    bool shouldToggleStyleBasedOnStartOfSelection() const { return m_type == EditingMacBehavior || m_type == EditingIOSBehavior; }
 
     // Standard Mac behavior when extending to a boundary is grow the selection rather than leaving the base
     // in place and moving the extent. Matches NSTextView.
-    bool shouldAlwaysGrowSelectionWhenExtendingToBoundary() const { return m_type == EditingMacBehavior; }
+    bool shouldAlwaysGrowSelectionWhenExtendingToBoundary() const { return m_type == EditingMacBehavior || m_type == EditingIOSBehavior; }
 
     // On Mac, when processing a contextual click, the object being clicked upon should be selected.
-    bool shouldSelectOnContextualMenuClick() const { return m_type == EditingMacBehavior; }
+    bool shouldSelectOnContextualMenuClick() const { return m_type == EditingMacBehavior || m_type == EditingIOSBehavior; }
 
     // On Linux, should be able to get and insert spelling suggestions without selecting the misspelled word.
     bool shouldAllowSpellingSuggestionsWithoutSelection() const
@@ -78,12 +78,16 @@ public:
     // On Mac, selecting backwards by word/line from the middle of a word/line, and then going
     // forward leaves the caret back in the middle with no selection, instead of directly selecting
     // to the other end of the line/word (Unix/Windows behavior).
-    bool shouldExtendSelectionByWordOrLineAcrossCaret() const { return m_type != EditingMacBehavior; }
+    bool shouldExtendSelectionByWordOrLineAcrossCaret() const { return m_type != EditingMacBehavior && m_type != EditingIOSBehavior; }
 
     // Based on native behavior, when using ctrl(alt)+arrow to move caret by word, ctrl(alt)+left arrow moves caret to
     // immediately before the word in all platforms, for example, the word break positions are: "|abc |def |hij |opq".
     // But ctrl+right arrow moves caret to "abc |def |hij |opq" on Windows and "abc| def| hij| opq|" on Mac and Linux.
     bool shouldSkipSpaceWhenMovingRight() const { return m_type == EditingWindowsBehavior; }
+
+    // On iOS the last entered character in a secure filed is shown momentarily, removing and adding back the
+    // space when deleting password cause space been showed insecurely.
+    bool shouldRebalanceWhiteSpacesInSecureField() const { return m_type != EditingIOSBehavior; }
 
 private:
     EditingBehaviorType m_type;
